# qsource-sim

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
configs/: example.yaml  example_short_crystal.yaml
configs/paper/: bandwidth.yaml  jitter.yaml  jitter_K240.yaml  jitter_K30.yaml  jitter_K60.yaml  jitter_L20.yaml  jitter_L5.yaml  jitter_fine.yaml  jitter_gauss.yaml  jitter_n128.yaml  jitter_n192.yaml  length.yaml  modes.yaml  rin.yaml  spacing.yaml
docs/: glossary_ar.md  guide_ar.md
notebooks/: demo_imperfections.py  demo_week2.py
paper/: README.md  datasheets.yaml  findings.md  main.tex  make_budget.py  make_configs.py  make_datasheet_table.py  make_figures.py  paper_ar.md  refs.bib  run_studies.py  summary_ar.md
paper/arabic/: 01_intro_ar.md  02_model_ar.md  03_results_ar.md  04_discussion_ar.md
paper/sections/: 00_abstract.tex  01_intro.tex  02_model.tex  03_results.tex  04_discussion.tex
paper/tables/: budget.json  budget.md  budget.tex  comparison.tex  datasheet_map.tex  kconv.json
src/qsource/: __init__.py  analytic.py  budget.py  cli.py  config.py  crystal.py  datasheet.py  jsa.py  metrics.py  pump.py  realistic.py  report.py  study.py
tests/: test_core.py  test_datasheet.py  test_program.py
